assets/custom.css
/* ... */
h2.banner__heading.second,
h2.banner__heading.third {
  background-color: #F9F5F0;
  color: #332520;
}

.banner__box {
  padding: 0;
}

.banner__content.page-width {
  max-width: unset;
  padding: 0;
}

.banner__buttons {
  text-align: right;
  display: block;
  max-width: 100%;
  position: absolute;
  bottom: 50px;
  right: 0;
  padding-right: 80px;
  z-index: 4;
}

.banner__buttons a {
  color: #fff;
  background-color: transparent;
  border: 2px solid white;
  text-decoration: none;
  padding: 15px 30px;
  font-weight: bold;
}

/* Head text blocks (slideshow overlay) */
.head1_text p,
.head2_text p {
  margin-top: 0;
  margin-bottom: 0;
}

.head1_text p {
  font-size: 44px;
  line-height: 45px;
  color: rgb(var(--color-base-text));
  font-weight: 700;
  font-style: italic;
  font-family: var(--font-heading-family);
}

.head2_text {
  margin-top: 0;
}

.head2_text p {
  font-size: 69px;
  line-height: 65px;
  font-family: var(--font-heading-family);
  padding-right: 10px;
}

/* ==========================================================================
   Custom Image & Banner Components
   ========================================================================== */

.custom-image-main {
  margin: 0 auto;
  text-align: center;
}

.image-banner-main img {
  max-width: 100%;
}

.text-with-custom {
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

.text-with-custom p {
  font-size: 40px;
  line-height: 35px;
}

.row-banner {
  display: flex;
  column-gap: 40px;
}

.box-banner img {
  max-width: 100%;
  height: 545px;
  width: 100%;
  display: block;
}

.box-custom-banner.first {
  width: 30%;
}

.box-custom-banner.second {
  width: 70%;
}

.first_image_mission {
  margin-top: 0;
}

.first_image_mission img {
  width: 100%;
  height: 100%;
}

.step-border img {
  max-width: 660px;
  width: 100%;
  margin: 0 auto;
  display: block;
}

.steps.heading {
  margin-bottom: 50px;
}

/* ==========================================================================
   Product Cards & Grid
   ========================================================================== */

.custom-product-main {
  text-align: center;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.card__heading a {
  font-size: 18px;
  letter-spacing: 0;
  line-height: 28px;
  text-transform: capitalize;
  color: var(--color-morito-brown);
  font-weight: 900;
  font-family: var(--font-body-family);
  text-align: center;
}

.quick-add__submit span.add_submit_text {
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 2px;
  color: var(--color-morito-brown);
}

span.price-item {
  font-weight: bold;
  color: var(--color-morito-brown);
}

.price {
  padding-left: 10px;
}

.price .price__regular {
  font-size: 22px;
}

.select-product-temp img {
  max-height: 100%;
  height: 100%;
  max-width: 100%;
}

.product.grid {
  padding-top: 50px;
}

.product.product--small.product--thumbnail_slider.grid.grid--1-col.grid--2-col-tablet {
  width: 100%;
}

.product__media-icon,
.thumbnail__badge {
  height: 40px;
  width: 40px;
}

.product__media-icon .icon {
  width: 20px;
  height: 20px;
}

.product-nav a {
  color: var(--color-morito-green);
  text-decoration: none;
  background: transparent;
}

.product-nav a:hover {
  color: #698070;
}

/* ==========================================================================
   Product Description Tabs
   ========================================================================== */

.tab button {
  background-color: inherit;
  float: left;
  border: none;
  outline: none;
  font-weight: bold;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
  font-size: 17px;
}

.tab button:hover {
  background-color: #ddd;
}

.tab button.active {
  background-color: #ccc;
}

.tabcontent {
  display: none;
  padding: 0 15px;
  border: 1px solid black;
  border-top: none;
}

.tabcontent p {
  margin: 0;
  padding: 15px 0 0;
}

#Description {
  display: block;
}

.product_descriprion_section .tab {
  border: 1px solid black;
  height: 50px;
}

.product_descriprion_section h4 {
  display: none;
}

/* ==========================================================================
   Rich Text Section
   ========================================================================== */

.rich-text-section {
  overflow: hidden;
}

.rich-text-section p {
  margin: 0;
}

.rich-text__text.rte p {
  font-size: 29px;
  line-height: 44px;
  color: var(--color-morito-brown);
  font-weight: 400;
  font-family: "Playfair Display Regular";
}

.rich-text__heading span {
  font-weight: 700;
  font-size: 40px;
}

.rich-text__blocks .rich-text__buttons {
  margin-top: 5rem;
}

.rich-text__blocks {
  max-width: unset;
}

.rich-text__blocks.center {
  padding: 30px 0;
}

.isolate .rich-text.content-container,
.custom-icon-bg {
  background-color: var(--color-morito-bg-light);
}

/* ==========================================================================
   Image with Text Section
   ========================================================================== */

.image-with-text__media-item.image-with-text__media-item--medium.image-with-text__media-item--middle.grid__item {
  padding-left: 20px;
}

.image-with-text__content {
  padding: 0;
}

.image-with-text__media img {
  object-fit: contain;
}

.image-with-text__grid {
  justify-content: center;
}

.image-with-text__text-item.grid__item {
  padding: 0 10px;
}

/* ==========================================================================
   Accordion / Collapsible Content
   ========================================================================== */

h3.accordion__title.h4 {
  font-size: 20px;
}

summary .icon-caret {
  height: 1.6rem;
  width: 1.6rem;
}

.collapsible-content summary:hover .accordion__title {
  text-decoration: none;
}
/* ... */

